# modern_killbill

./: CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  MIGRATION_PLAN.md  OVERVIEW.md  PROGRESS_SUMMARY.md  README.md  TARGET_SPEC.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: ENCRYPTION.md  env.py
backend/alembic/versions/: 20251119_0849_d9b53e139c31_initial_schema_accounts_plans_.py  20251121_analytics_snapshots.py  20251121_encryption_at_rest_verification.py
backend/scripts/: backup.py
backend/src/billing/: __init__.py  cache.py  config.py  database.py  main.py  metrics.py  tracing.py
backend/src/billing/adapters/: stripe_adapter.py
backend/src/billing/api/: deps.py
backend/src/billing/auth/: jwt.py  rbac.py
backend/src/billing/graphql/: __init__.py  resolvers.py  schema.py
backend/src/billing/integrations/: notification_service.py  tax_service.py
backend/src/billing/middleware/: __init__.py  logging.py  metrics.py  rate_limit.py  security_headers.py  security_monitor.py
backend/src/billing/models/: __init__.py  account.py  analytics_snapshot.py  audit_log.py  base.py  credit.py  invoice.py  payment.py  payment_method.py  plan.py  subscription.py  usage_record.py  webhook_event.py
backend/src/billing/schemas/: __init__.py  account.py  analytics_snapshot.py  audit_log.py  credit.py  error.py  invoice.py  payment.py  payment_method.py  plan.py  subscription.py  usage_record.py  webhook_event.py
backend/src/billing/services/: account_service.py  analytics_service.py  credit_service.py  dunning_service.py  invoice_pdf_service.py  invoice_service.py  payment_method_service.py  payment_service.py  plan_service.py  subscription_service.py  usage_service.py  webhook_service.py
backend/src/billing/templates/: invoice.html
backend/tests/: __init__.py  conftest.py  load_test.py
backend/tests/integration/: test_accounts.py  test_credits.py  test_dunning.py  test_e2e_workflows.py  test_error_handling.py  test_health.py  test_invoice_pdf.py  test_invoices.py  test_multi_currency.py  test_payments.py  test_plan_changes.py  test_plans.py  test_subscription_pause.py  test_subscriptions.py  test_tax.py  test_usage.py  test_webhooks.py
backend/tests/utils/: factories.py
k8s/: README.md  configmap.yaml  (+6 more)
(+43 files in other folders)
